--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 #npm i && cd api && npm i && cd ../web-react && npm i && cd .. && npm run build && cp api/build/graphql-schema.js api/build/functions/graphql/. && cp api/build/schema.graphql api/build/functions/graphql/.  && cd api/src/functions/graphql && npm i
-  command = "npm i && cd api/src/services/bgi && npm i && cd api/src/services/casic && npm i && cd api && npm i"
+  command = "npm i && cd api/src/services/casic && npm i "
   publish = "web-react/build"
   functions = "api/build/functions"
 
