--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "./node_modules/.bin/nodemon --watch src --ext js,graphql --exec babel-node  src/index.js",
-    "prebuild": "cd src/services/bgi && npm",
     "build": "babel src --out-dir build && shx cp .env build 2>/dev/null || : && shx cp src/schema.graphql build",
     "now-build": "babel src --out-dir build && shx cp src/schema.graphql build",
     "start": "npm run build && node build/index.js",
@@ -18,7 +17,7 @@
   },
   "author": "Konstantin",
   "license": "MIT",
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@apollo/federation": "^0.25.2",
