--- a/web-react/package.json
+++ b/web-react/package.json
@@ -18,14 +18,14 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-force-graph-2d": "^1.23.7",
-    "react-force-grap h-3d": "^1.21.9",
+    "react-force-graph-3d": "^1.21.9",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.2",
     "recharts": "^1.8.5"
   },
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
+    "preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
