--- a/api/src/functions/bgi/package.json
+++ b/api/src/functions/bgi/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "accounts",
+  "name": "bgi",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "@apollo/federation": "latest",
     "apollo-server": "latest",
-    "esm": "^3.2.25",
     "graphql": "latest"
   },
-  "type": "module",
+  "type": "commonjs",
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
