--- a/api/src/functions/bgi/package.json
+++ b/api/src/functions/bgi/package.json
@@ -8,7 +8,7 @@
     "apollo-server": "latest",
     "graphql": "latest"
   },
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
