--- a/api/src/functions/bgi/package.json
+++ b/api/src/functions/bgi/package.json
@@ -1,7 +1,8 @@
 {
   "name": "bgi",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "CI= npm run build"
   },
   "dependencies": {
     "@apollo/federation": "latest",
