--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,8 @@
   NEO4J_URI = "Neo4j URI (ex: bolt://localhost:7687)"
   NEO4J_USER = "Neo4j User"
   NEO4J_PASSWORD = "Neo4j Password"
+
+[[redirects]]
+  from = "/graphql"
+  to = "/.netlify/functions/graphql"
+  status = 200
