--- a/api/src/functions/bgi/package.json
+++ b/api/src/functions/bgi/package.json
@@ -8,7 +8,7 @@
     "@apollo/federation": "^0.17.0",
     "apollo-server-lambda": "^2.14.2",
     "dotenv": "^10.0.0",
-    "graphql": "latest",
+    "graphql": "^15.3.0",
     "neo4j-driver": "^4.3.1"
   },
   "type": "module",
