--- a/api/package.json
+++ b/api/package.json
@@ -23,11 +23,12 @@
     "apollo-server-lambda": "^2.19.0",
     "csv-parse": "^4.10.1",
     "dotenv": "^7.0.0",
+    "graphql": "^15.5.1",
     "graphql-auth-directives": "^2.2.2",
     "neo4j-driver": "^4.2.2",
     "node-fetch": "^2.6.0",
-    "react": "^16.13.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "react": "^16.13.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
