--- a/api/src/functions/bgi/package.json
+++ b/api/src/functions/bgi/package.json
@@ -1,14 +1,14 @@
 {
   "name": "bgi",
   "scripts": {
-    "start": "node bgi.js",
+    "start": "node --harmony bgi.js",
     "build": "CI= npm run build"
   },
   "dependencies": {
     "@apollo/federation": "latest",
     "apollo-server-lambda": "^2.14.2",
     "dotenv": "^10.0.0",
-    "graphql": "^15.3.0",
+    "graphql": "^15.5.1",
     "neo4j-driver": "^4.3.1"
   },
   "type": "module",
