--- a/web-react/package.json
+++ b/web-react/package.json
@@ -7,14 +7,15 @@
   },
   "dependencies": {
     "@apollo/client": "^3.1.3",
-    "@auth0/auth0-react": "^1.5.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "apollo-upload-client": "^16.0.0",
     "classnames": "^2.2.6",
-    "graphql": "^14.5.8",
+    "eslint-plugin-prettier": "^3.4.0",
+    "graphql": "^15.5.1",
     "moment": "^2.29.1",
     "npm-force-resolutions": "0.0.10",
+    "prettier": "^2.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-force-graph-2d": "^1.23.7",
@@ -22,11 +23,10 @@
     "react-json-csv": "^2.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "^4.0.3",
     "recharts": "^1.8.5"
   },
   "scripts": {
-    "preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -34,6 +34,7 @@
     "now-build": "react-scripts build"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
     "http-proxy-middleware": "^0.20.0"
   },
   "browserslist": [
