--- a/api/src/functions/bgi/package.json
+++ b/api/src/functions/bgi/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "@apollo/federation": "latest",
-    "apollo-server-lambda": "^2.14.2",
+    "apollo-server": "^2.19.2",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
     "neo4j-driver": "^4.3.1"
