--- a/api/package.json
+++ b/api/package.json
@@ -8,12 +8,12 @@
     "start:dev": "./node_modules/.bin/nodemon --watch src --ext js,graphql --exec babel-node  src/index.js",
     "build": "babel src --out-dir build && shx cp .env build 2>/dev/null || : && shx cp src/schema.graphql build",
     "now-build": "babel src --out-dir build && shx cp src/schema.graphql build",
-    "start": "npm run build && node build/index.js",
+    "start": "node src/index.js",
     "seedDb": "./node_modules/.bin/babel-node src/seed/seed-db.js"
   },
   "author": "Konstantin",
   "license": "MIT",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@apollo/federation": "^0.25.2",
