--- a/api/src/functions/casc/package.json
+++ b/api/src/functions/casc/package.json
@@ -1,7 +1,7 @@
 {
   "name": "casc",
   "scripts": {
-    "start": "node --harmony casc.js",
+    "start": " pm2 start casc.js",
     "build": "CI= npm run build"
   },
   "dependencies": {
