--- a/api/src/functions/casic/casic.env
+++ b/api/src/functions/casic/casic.env
@@ -2,12 +2,12 @@
 # This file is provided as an example and should be replaced with your own values
 # You probably don't want to check this into version control!
 NEO4J_USER=neo4j
-NEO4J_URI_BGI=bolt://54.224.51.117:7687
-NEO4J_PASSWORD_BGI=i-08bb780d2ee5c5ec9
+NEO4J_URI_CASIC=bolt://3.208.1.4:7687
+NEO4J_PASSWORD_CASIC=i-0e331822501bc6d84
 
 # Uncomment this line to specify a specific Neo4j database (v4.x+ only)
 #NEO4J_DATABASE=neo4j
 
 GRAPHQL_SERVER_HOST=0.0.0.0
-GRAPHQL_SERVER_PORT=4001
+GRAPHQL_SERVER_PORT=4004
 GRAPHQL_SERVER_PATH=/graphql
